jss2zb/src/turtle.output
Nonterminals useless in grammar

   params
   atomics
   exprs


Terminals unused in grammar

   ELSE
   PCALL


Rules useless in grammar

   54 stmt: PCALL ID params SEMICOLON

   55 params: params atomics
   56       | params exprs

   57 atomics: atomic
   58        | atomics atomic

   59 exprs: expr
   60      | exprs expr


Grammar

    0 $accept: program $end

    1 program: head decllist stmtlist tail

    2 head: /* empty */

    3 tail: /* empty */

    4 decllist: /* empty */
    5         | decllist decl

    6 decl: VAR ID SEMICOLON

    7 stmtlist: /* empty */
    8         | stmtlist stmt

    9 stmt: ID ASSIGN expr SEMICOLON
   10     | GO expr SEMICOLON
   11     | JUMP expr SEMICOLON
   12     | TURN expr SEMICOLON

   13 $@1: /* empty */

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt
   15     | COPEN stmtlist CCLOSE
   16     | IFBLOCK

   17 $@2: /* empty */

   18 $@3: /* empty */

   19 stmt: WHILE $@2 comparator $@3 whileStatements

   20 $@4: /* empty */

   21 whileStatements: CURLOPEN $@4 stmtlist CURLCLOSE
   22                | stmt

   23 $@5: /* empty */

   24 stmt: PROCEDURE ID $@5 CURLOPEN stmtlist CURLCLOSE

   25 IFBLOCK: IF comparator then ELSEBLOCK

   26 comparator: OPEN compare CLOSE

   27 then: THEN
   28     | /* empty */

   29 ELSEBLOCK: /* empty */

   30 compare: expr EQUALS expr
   31        | expr NOTEQUALS expr
   32        | expr GREATERTHAN expr
   33        | expr GREATERTHANEQUALS expr
   34        | expr LESSTHAN expr
   35        | expr LESSTHANEQUALS expr
   36        | expr

   37 expr: expr PLUS term
   38     | expr MINUS term
   39     | term

   40 term: term TIMES factor
   41     | term DIV factor
   42     | factor

   43 factor: MINUS atomic
   44       | PLUS atomic
   45       | SIN factor
   46       | COS factor
   47       | SQRT factor
   48       | atomic

   49 atomic: OPEN expr CLOSE
   50       | NUMBER
   51       | FLOAT
   52       | ID
   53       | PARAM


Terminals, with rules where they appear

$end (0) 0
error (256)
GO (258) 10
TURN (259) 12
VAR (260) 6
JUMP (261) 11
FOR (262) 14
STEP (263) 14
TO (264) 14
DO (265) 14
COPEN (266) 15
CCLOSE (267) 15
IF (268) 25
ELSE (269)
THEN (270) 27
WHILE (271) 19
PROCEDURE (272) 24
PCALL (273)
PARAM (274) 53
SIN (275) 45
COS (276) 46
SQRT (277) 47
FLOAT (278) 51
ID (279) 6 9 14 24 52
NUMBER (280) 50
SEMICOLON (281) 6 9 10 11 12
PLUS (282) 37 44
MINUS (283) 38 43
TIMES (284) 40
DIV (285) 41
OPEN (286) 26 49
CLOSE (287) 26 49
ASSIGN (288) 9 14
LESSTHAN (289) 34
GREATERTHAN (290) 32
LESSTHANEQUALS (291) 35
GREATERTHANEQUALS (292) 33
EQUALS (293) 30
NOTEQUALS (294) 31
CURLOPEN (295) 21 24
CURLCLOSE (296) 21 24


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
head (44)
    on left: 2, on right: 1
tail (45)
    on left: 3, on right: 1
decllist (46)
    on left: 4 5, on right: 1 5
decl (47)
    on left: 6, on right: 5
stmtlist (48)
    on left: 7 8, on right: 1 8 15 21 24
stmt (49)
    on left: 9 10 11 12 14 15 16 19 24, on right: 8 14 22
$@1 (50)
    on left: 13, on right: 14
$@2 (51)
    on left: 17, on right: 19
$@3 (52)
    on left: 18, on right: 19
whileStatements (53)
    on left: 21 22, on right: 19
$@4 (54)
    on left: 20, on right: 21
$@5 (55)
    on left: 23, on right: 24
IFBLOCK (56)
    on left: 25, on right: 16
comparator (57)
    on left: 26, on right: 19 25
then (58)
    on left: 27 28, on right: 25
ELSEBLOCK (59)
    on left: 29, on right: 25
compare (60)
    on left: 30 31 32 33 34 35 36, on right: 26
expr (61)
    on left: 37 38 39, on right: 9 10 11 12 14 30 31 32 33 34 35 36
    37 38 49
term (62)
    on left: 40 41 42, on right: 37 38 39 40 41
factor (63)
    on left: 43 44 45 46 47 48, on right: 40 41 42 45 46 47
atomic (64)
    on left: 49 50 51 52 53, on right: 43 44 48


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (head)

    program  go to state 1
    head     go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: head . decllist stmtlist tail

    $default  reduce using rule 4 (decllist)

    decllist  go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    1 program: head decllist . stmtlist tail
    5 decllist: decllist . decl

    VAR  shift, and go to state 5

    $default  reduce using rule 7 (stmtlist)

    decl      go to state 6
    stmtlist  go to state 7


state 5

    6 decl: VAR . ID SEMICOLON

    ID  shift, and go to state 8


state 6

    5 decllist: decllist decl .

    $default  reduce using rule 5 (decllist)


state 7

    1 program: head decllist stmtlist . tail
    8 stmtlist: stmtlist . stmt

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17

    $default  reduce using rule 3 (tail)

    tail     go to state 18
    stmt     go to state 19
    IFBLOCK  go to state 20


state 8

    6 decl: VAR ID . SEMICOLON

    SEMICOLON  shift, and go to state 21


state 9

   10 stmt: GO . expr SEMICOLON

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 32
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 10

   12 stmt: TURN . expr SEMICOLON

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 36
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 11

   11 stmt: JUMP . expr SEMICOLON

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 37
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 12

   14 stmt: FOR . ID ASSIGN expr STEP expr TO expr DO $@1 stmt

    ID  shift, and go to state 38


state 13

   15 stmt: COPEN . stmtlist CCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 39


state 14

   25 IFBLOCK: IF . comparator then ELSEBLOCK

    OPEN  shift, and go to state 40

    comparator  go to state 41


state 15

   19 stmt: WHILE . $@2 comparator $@3 whileStatements

    $default  reduce using rule 17 ($@2)

    $@2  go to state 42


state 16

   24 stmt: PROCEDURE . ID $@5 CURLOPEN stmtlist CURLCLOSE

    ID  shift, and go to state 43


state 17

    9 stmt: ID . ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 44


state 18

    1 program: head decllist stmtlist tail .

    $default  reduce using rule 1 (program)


state 19

    8 stmtlist: stmtlist stmt .

    $default  reduce using rule 8 (stmtlist)


state 20

   16 stmt: IFBLOCK .

    $default  reduce using rule 16 (stmt)


state 21

    6 decl: VAR ID SEMICOLON .

    $default  reduce using rule 6 (decl)


state 22

   53 atomic: PARAM .

    $default  reduce using rule 53 (atomic)


state 23

   45 factor: SIN . factor

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    factor  go to state 45
    atomic  go to state 35


state 24

   46 factor: COS . factor

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    factor  go to state 46
    atomic  go to state 35


state 25

   47 factor: SQRT . factor

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    factor  go to state 47
    atomic  go to state 35


state 26

   51 atomic: FLOAT .

    $default  reduce using rule 51 (atomic)


state 27

   52 atomic: ID .

    $default  reduce using rule 52 (atomic)


state 28

   50 atomic: NUMBER .

    $default  reduce using rule 50 (atomic)


state 29

   44 factor: PLUS . atomic

    PARAM   shift, and go to state 22
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    OPEN    shift, and go to state 31

    atomic  go to state 48


state 30

   43 factor: MINUS . atomic

    PARAM   shift, and go to state 22
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    OPEN    shift, and go to state 31

    atomic  go to state 49


state 31

   49 atomic: OPEN . expr CLOSE

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 50
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 32

   10 stmt: GO expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    SEMICOLON  shift, and go to state 51
    PLUS       shift, and go to state 52
    MINUS      shift, and go to state 53


state 33

   39 expr: term .
   40 term: term . TIMES factor
   41     | term . DIV factor

    TIMES  shift, and go to state 54
    DIV    shift, and go to state 55

    $default  reduce using rule 39 (expr)


state 34

   42 term: factor .

    $default  reduce using rule 42 (term)


state 35

   48 factor: atomic .

    $default  reduce using rule 48 (factor)


state 36

   12 stmt: TURN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    SEMICOLON  shift, and go to state 56
    PLUS       shift, and go to state 52
    MINUS      shift, and go to state 53


state 37

   11 stmt: JUMP expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    SEMICOLON  shift, and go to state 57
    PLUS       shift, and go to state 52
    MINUS      shift, and go to state 53


state 38

   14 stmt: FOR ID . ASSIGN expr STEP expr TO expr DO $@1 stmt

    ASSIGN  shift, and go to state 58


state 39

    8 stmtlist: stmtlist . stmt
   15 stmt: COPEN stmtlist . CCLOSE

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    CCLOSE     shift, and go to state 59
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17

    stmt     go to state 19
    IFBLOCK  go to state 20


state 40

   26 comparator: OPEN . compare CLOSE

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    compare  go to state 60
    expr     go to state 61
    term     go to state 33
    factor   go to state 34
    atomic   go to state 35


state 41

   25 IFBLOCK: IF comparator . then ELSEBLOCK

    THEN  shift, and go to state 62

    $default  reduce using rule 28 (then)

    then  go to state 63


state 42

   19 stmt: WHILE $@2 . comparator $@3 whileStatements

    OPEN  shift, and go to state 40

    comparator  go to state 64


state 43

   24 stmt: PROCEDURE ID . $@5 CURLOPEN stmtlist CURLCLOSE

    $default  reduce using rule 23 ($@5)

    $@5  go to state 65


state 44

    9 stmt: ID ASSIGN . expr SEMICOLON

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 66
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 45

   45 factor: SIN factor .

    $default  reduce using rule 45 (factor)


state 46

   46 factor: COS factor .

    $default  reduce using rule 46 (factor)


state 47

   47 factor: SQRT factor .

    $default  reduce using rule 47 (factor)


state 48

   44 factor: PLUS atomic .

    $default  reduce using rule 44 (factor)


state 49

   43 factor: MINUS atomic .

    $default  reduce using rule 43 (factor)


state 50

   37 expr: expr . PLUS term
   38     | expr . MINUS term
   49 atomic: OPEN expr . CLOSE

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53
    CLOSE  shift, and go to state 67


state 51

   10 stmt: GO expr SEMICOLON .

    $default  reduce using rule 10 (stmt)


state 52

   37 expr: expr PLUS . term

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    term    go to state 68
    factor  go to state 34
    atomic  go to state 35


state 53

   38 expr: expr MINUS . term

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    term    go to state 69
    factor  go to state 34
    atomic  go to state 35


state 54

   40 term: term TIMES . factor

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    factor  go to state 70
    atomic  go to state 35


state 55

   41 term: term DIV . factor

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    factor  go to state 71
    atomic  go to state 35


state 56

   12 stmt: TURN expr SEMICOLON .

    $default  reduce using rule 12 (stmt)


state 57

   11 stmt: JUMP expr SEMICOLON .

    $default  reduce using rule 11 (stmt)


state 58

   14 stmt: FOR ID ASSIGN . expr STEP expr TO expr DO $@1 stmt

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 72
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 59

   15 stmt: COPEN stmtlist CCLOSE .

    $default  reduce using rule 15 (stmt)


state 60

   26 comparator: OPEN compare . CLOSE

    CLOSE  shift, and go to state 73


state 61

   30 compare: expr . EQUALS expr
   31        | expr . NOTEQUALS expr
   32        | expr . GREATERTHAN expr
   33        | expr . GREATERTHANEQUALS expr
   34        | expr . LESSTHAN expr
   35        | expr . LESSTHANEQUALS expr
   36        | expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS               shift, and go to state 52
    MINUS              shift, and go to state 53
    LESSTHAN           shift, and go to state 74
    GREATERTHAN        shift, and go to state 75
    LESSTHANEQUALS     shift, and go to state 76
    GREATERTHANEQUALS  shift, and go to state 77
    EQUALS             shift, and go to state 78
    NOTEQUALS          shift, and go to state 79

    $default  reduce using rule 36 (compare)


state 62

   27 then: THEN .

    $default  reduce using rule 27 (then)


state 63

   25 IFBLOCK: IF comparator then . ELSEBLOCK

    $default  reduce using rule 29 (ELSEBLOCK)

    ELSEBLOCK  go to state 80


state 64

   19 stmt: WHILE $@2 comparator . $@3 whileStatements

    $default  reduce using rule 18 ($@3)

    $@3  go to state 81


state 65

   24 stmt: PROCEDURE ID $@5 . CURLOPEN stmtlist CURLCLOSE

    CURLOPEN  shift, and go to state 82


state 66

    9 stmt: ID ASSIGN expr . SEMICOLON
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    SEMICOLON  shift, and go to state 83
    PLUS       shift, and go to state 52
    MINUS      shift, and go to state 53


state 67

   49 atomic: OPEN expr CLOSE .

    $default  reduce using rule 49 (atomic)


state 68

   37 expr: expr PLUS term .
   40 term: term . TIMES factor
   41     | term . DIV factor

    TIMES  shift, and go to state 54
    DIV    shift, and go to state 55

    $default  reduce using rule 37 (expr)


state 69

   38 expr: expr MINUS term .
   40 term: term . TIMES factor
   41     | term . DIV factor

    TIMES  shift, and go to state 54
    DIV    shift, and go to state 55

    $default  reduce using rule 38 (expr)


state 70

   40 term: term TIMES factor .

    $default  reduce using rule 40 (term)


state 71

   41 term: term DIV factor .

    $default  reduce using rule 41 (term)


state 72

   14 stmt: FOR ID ASSIGN expr . STEP expr TO expr DO $@1 stmt
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    STEP   shift, and go to state 84
    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53


state 73

   26 comparator: OPEN compare CLOSE .

    $default  reduce using rule 26 (comparator)


state 74

   34 compare: expr LESSTHAN . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 85
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 75

   32 compare: expr GREATERTHAN . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 86
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 76

   35 compare: expr LESSTHANEQUALS . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 87
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 77

   33 compare: expr GREATERTHANEQUALS . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 88
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 78

   30 compare: expr EQUALS . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 89
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 79

   31 compare: expr NOTEQUALS . expr

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 90
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 80

   25 IFBLOCK: IF comparator then ELSEBLOCK .

    $default  reduce using rule 25 (IFBLOCK)


state 81

   19 stmt: WHILE $@2 comparator $@3 . whileStatements

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17
    CURLOPEN   shift, and go to state 91

    stmt             go to state 92
    whileStatements  go to state 93
    IFBLOCK          go to state 20


state 82

   24 stmt: PROCEDURE ID $@5 CURLOPEN . stmtlist CURLCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 94


state 83

    9 stmt: ID ASSIGN expr SEMICOLON .

    $default  reduce using rule 9 (stmt)


state 84

   14 stmt: FOR ID ASSIGN expr STEP . expr TO expr DO $@1 stmt

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 95
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 85

   34 compare: expr LESSTHAN expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 34 (compare)


state 86

   32 compare: expr GREATERTHAN expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 32 (compare)


state 87

   35 compare: expr LESSTHANEQUALS expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 35 (compare)


state 88

   33 compare: expr GREATERTHANEQUALS expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 33 (compare)


state 89

   30 compare: expr EQUALS expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 30 (compare)


state 90

   31 compare: expr NOTEQUALS expr .
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53

    $default  reduce using rule 31 (compare)


state 91

   21 whileStatements: CURLOPEN . $@4 stmtlist CURLCLOSE

    $default  reduce using rule 20 ($@4)

    $@4  go to state 96


state 92

   22 whileStatements: stmt .

    $default  reduce using rule 22 (whileStatements)


state 93

   19 stmt: WHILE $@2 comparator $@3 whileStatements .

    $default  reduce using rule 19 (stmt)


state 94

    8 stmtlist: stmtlist . stmt
   24 stmt: PROCEDURE ID $@5 CURLOPEN stmtlist . CURLCLOSE

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17
    CURLCLOSE  shift, and go to state 97

    stmt     go to state 19
    IFBLOCK  go to state 20


state 95

   14 stmt: FOR ID ASSIGN expr STEP expr . TO expr DO $@1 stmt
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    TO     shift, and go to state 98
    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53


state 96

   21 whileStatements: CURLOPEN $@4 . stmtlist CURLCLOSE

    $default  reduce using rule 7 (stmtlist)

    stmtlist  go to state 99


state 97

   24 stmt: PROCEDURE ID $@5 CURLOPEN stmtlist CURLCLOSE .

    $default  reduce using rule 24 (stmt)


state 98

   14 stmt: FOR ID ASSIGN expr STEP expr TO . expr DO $@1 stmt

    PARAM   shift, and go to state 22
    SIN     shift, and go to state 23
    COS     shift, and go to state 24
    SQRT    shift, and go to state 25
    FLOAT   shift, and go to state 26
    ID      shift, and go to state 27
    NUMBER  shift, and go to state 28
    PLUS    shift, and go to state 29
    MINUS   shift, and go to state 30
    OPEN    shift, and go to state 31

    expr    go to state 100
    term    go to state 33
    factor  go to state 34
    atomic  go to state 35


state 99

    8 stmtlist: stmtlist . stmt
   21 whileStatements: CURLOPEN $@4 stmtlist . CURLCLOSE

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17
    CURLCLOSE  shift, and go to state 101

    stmt     go to state 19
    IFBLOCK  go to state 20


state 100

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr . DO $@1 stmt
   37 expr: expr . PLUS term
   38     | expr . MINUS term

    DO     shift, and go to state 102
    PLUS   shift, and go to state 52
    MINUS  shift, and go to state 53


state 101

   21 whileStatements: CURLOPEN $@4 stmtlist CURLCLOSE .

    $default  reduce using rule 21 (whileStatements)


state 102

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr DO . $@1 stmt

    $default  reduce using rule 13 ($@1)

    $@1  go to state 103


state 103

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr DO $@1 . stmt

    GO         shift, and go to state 9
    TURN       shift, and go to state 10
    JUMP       shift, and go to state 11
    FOR        shift, and go to state 12
    COPEN      shift, and go to state 13
    IF         shift, and go to state 14
    WHILE      shift, and go to state 15
    PROCEDURE  shift, and go to state 16
    ID         shift, and go to state 17

    stmt     go to state 104
    IFBLOCK  go to state 20


state 104

   14 stmt: FOR ID ASSIGN expr STEP expr TO expr DO $@1 stmt .

    $default  reduce using rule 14 (stmt)
